2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	From 2000-06-14 John Marshall <john_w_marshall@palm.com>:
	* coff-solib.c: Include symfile.h and objfiles.h to make
	OBJF_SHARED visible.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* configure.in (--enable-gdbmi): Enable by default.
	* configure: Regenerate.
	* TODO: Update.
	* NEWS: Update

2001-06-28  Joel Brobecker  <brobecker@act-europe.fr>

        * solib-osf.c (osf_in_dynsym_resolve_code): Add a comment
        explaining the consequences of always returning zero. No code
        change.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	From 2001-06-08 Daniel Jacobowitz <djacobowitz@mvista.com>:
	* defs.h (enum target_signal): Add TARGET_SIGNAL_REALTIME_65
	to TARGET_SIGNAL_REALTIME_127.
	* target.c (struct signals): Add SIG63 to SIG127.
	(target_signal_from_host): Handle up to 127 signals.
	(do_target_signal_to_host): Likewise.
	
2001-06-27  Andrew Cagney  <ac131313@redhat.com>

	* remote-sds.c (sds_start_remote): Change type of ``c'' to int
	from possibly unsigned char.

2001-06-27  Andrew Cagney  <ac131313@redhat.com>

	* ser-ocd.c: Delete file.
	* Makefile.in (ALLDEPFILES): Remove ser-ocd.c
	(ser-ocd.o): Delete target.
	* TODO: Update.
	* NEWS: Update.

2001-06-27  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS (Write After Approval): Sort.
	(Past Maintainers): Daniel Berlin stepped down as C++ maintainer.

2001-06-26  Andrew Cagney  <ac131313@redhat.com>

	* breakpoint.c (breakpoint_1): Always output the breakpoint
	headings.  Leave it to ui-out to decide which

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* stack.c (print_frame): For ui_out, output a list of arguments.

2001-06-25  Kevin Buettner  <kevinb@redhat.com>

	* MAINTAINERS (paper trail): Update.

2001-06-25  Michael Snyder  <msnyder@redhat.com>

	* infrun.c: Eliminate the "thread_step_needed" state variable, 
	and replace it with a relatively simple test in resume.